@@ -1481,6 +1481,8 @@ nuttx-0.4.10 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* lib/: Greatly simplified mktime() and gmtime_r().  The Gregorian and
 	  Julian time calculations were interesting, but not necessary in the
 	  typical embeddd system.
+	* sched/: Added gettimeofday().  This implementation is simply a thin
+	  wrapper around clock_gettimer().
 
 nuttx-0.4.10 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
